Fix box width to account for skinny sidebar popup width
50% box width was too small for a skinny sidebar popup. 80% works better.

--- a/TOS-Frontend/PocketLawyer.css
+++ b/TOS-Frontend/PocketLawyer.css
@@ -19,7 +19,7 @@ h1 {
     color: white;
     box-sizing: border-box;
     padding: 40px;
-    width: 50%;
+    width: 80%;
     height: 100vh;
     border-radius: 8px;
 }
